[package]
name = "membrane-mutex"
version = "0.1.0"
authors = ["aranajhonny <jhonnyjosearana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.15.2"
rand = "0.7.0"
fallible-iterator = "0.1.3"
serde_json = "1.0"
serde = { version = "1.0.99", features = ["derive"] }
